# odrl-z3-reasoner

./: .coverage  .gitignore  LICENSE.txt  README.md  analyze_test_files.py  bcp47-language-hierarchy.jsonld  bcp47-language-hierarchy.rdf  bcp47-language-hierarchy.ttl  check_composites.py  cleanup.sh  language-hierarchy.ttl  main.py  map.py  migrate_to_new_architecture.sh  pyproject.toml  requirements.txt  setup_and_test.sh  test_all_self_contained.sh  test_ttl_files.py
backup_old/encoder/: __init__.py  z3_encoder.py
backup_old/normalizer/: __init__.py
backup_old/parser/: __init__.py  ttl_parser.py
benchmarks/: ODRL-DNT-001.smt2  benchmark-README.md  odrl-benchmarks.smt2  validate_benchmarks.py
docs/: Gap.md  IMPLEMENTATION_STATUS.md  Implementation Roadmap.md  Next.md  ODRL-SA-Architecture-Diagram.txt  ODRL-SA-CAPABILITIES.md  ODRL-SA-Mermaid-Diagrams.md  ODRL-SA-Motivating-Examples.py  OUTPUT_DESIGN .md  Prolog_Vis_Z3.md  SZS Ontology.md  Test_Data_Benchmar.md  XSD-Grounded-ODRL-Constraints.md  implementation-roadmap.md  implementation_current.md.md  odrl-theoretical-foundations.md  output-design.md  policy-tool.md  run.md  semantics-action.md  what-changed.md  work-vs-salas-2025.md
src/: __init__.py  __main__.py  main.py
tests/: conflict_detector.py  conftest.py  test_canonical.py  test_comprehensive.py  test_conflict_detector.py  test_core.py  test_encoder.py  test_inheritance.py  test_integration.py  test_multi_valued.py  test_multi_valued_integration.py  test_normalizer.py  test_odrl_sa.py  test_parser.py  test_registry.py  test_z3_encoder.py
(+417 files in other folders)
