[project]
name = "odrl-z3-reasoner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "python-dateutil>=2.9.0.post0",
    "rdflib>=7.5.0",
    "z3>=0.2.0",
    "z3-solver>=4.15.4.0",
]
