[project]
name = "odrl-z3-reasoner"
version = "0.1.0"
description = "ODRL Static Analyzer - Formal verification tool for ODRL policies using Z3 SMT solver"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.3",
    "rdflib>=7.5.0",
    "requests>=2.32.5",
    "z3-solver>=4.15.4.0",
]

[tool.pyright]
extraPaths = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]